# opengl-samples

./: LICENSE  README.md
01-hello-opengl/: CMakeLists.txt  README.md
01-hello-opengl/src/: main.cpp
02-hello-triangle/: CMakeLists.txt  README.md
02-hello-triangle/assets/shaders/: triangle.frag.glsl  triangle.vert.glsl
02-hello-triangle/src/: loader.cpp  main.cpp
03-texture-mapping/: CMakeLists.txt  README.md
03-texture-mapping/assets/shaders/: rectangle.frag.glsl  rectangle.vert.glsl
03-texture-mapping/src/: main.cpp
04-transformation/: .gitignore  CMakeLists.txt  README.md
04-transformation/assets/shaders/: rectangle.vert.glsl
04-transformation/src/: main.cpp  shaderLoader.cpp  shaderLoader.h  textureLoader.cpp  textureLoader.h
